# SphynxEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate.bat
Sandbox/: CMakeLists.txt  Sandbox.spxproject
Sandbox/Assets/: AssetRegistry.spxasset
Sandbox/Assets/Prefabs/: test_prefab.spxasset
Sandbox/Assets/Scenes/: PrefabTestScene.spxasset  TestScene.spxasset
Sandbox/Assets/Sounds/: enemyDeath.spxasset
Sandbox/Assets/Textures/: cat.spxasset  enemyAnimation.spxasset  enemySpritesheet.spxasset  enemy_scaled5x.spxasset
Sandbox/src/: ExampleScriptComponent.h  Sandbox.cpp  Sandbox.h
SphynxEngine/: CMakeLists.txt
SphynxEngine-Editor/: CMakeLists.txt
SphynxEngine-Editor/src/: EditorApplication.cpp  EditorApplication.h  EditorCameraController.h  EditorLayer.cpp  EditorLayer.h  ImGuiExtra.cpp  ImGuiExtra.h  ProjectInfo.h
SphynxEngine-Editor/src/Attribute/: AssetHandleType.h
SphynxEngine-Editor/src/Base/: Editor.cpp  Editor.h  Panel.cpp  Panel.h  Resources.h  Toolbar.h
SphynxEngine-Editor/src/Editors/: PrefabEditor.cpp  PrefabEditor.h  ProjectEditor.cpp  ProjectEditor.h  PropertyEditor.cpp  PropertyEditor.h  SceneEditor.cpp  SceneEditor.h
SphynxEngine-Editor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  DetailsPanel.cpp  DetailsPanel.h  SceneOutlinerPanel.cpp  SceneToolbar.cpp  SceneToolbar.h  ViewportPanel.cpp  ViewportPanel.h
SphynxEngine-Editor/src/PropertyDrawer/: PropertyDrawer.cpp  PropertyDrawer.h  PropertyDrawerManager.cpp  PropertyDrawerManager.h
SphynxEngine-Editor/src/PropertyViewer/: PropertyViewer.cpp  PropertyViewer.h
SphynxEngine-Editor/src/Scene/: EditorScene.cpp  EditorScene.h  EditorSceneDeserializer.cpp  EditorSceneDeserializer.h  EditorSceneSerializer.cpp  EditorSceneSerializer.h  MatchingVisitor.cpp  MatchingVisitor.h  PrefabActor.h
SphynxEngine-Editor/src/Utils/: PlaybackState.h
SphynxEngine-Editor/src/Widgets/: ButtonWidget.cpp
SphynxEngine-Runtime/: CMakeLists.txt
SphynxEngine-Runtime/src/: Runtime.cpp
SphynxEngine/src/: Sphynx.h  spxpch.h
SphynxEngine/src/Animation/: Animation2D.cpp  Animation2D.h  Animation2DManager.cpp  Animation2DManager.h
SphynxEngine/src/Asset/: Asset.cpp  Asset.h  AssetDependencySolver.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  AssetMetadata.h  SubAssetSolver.h
SphynxEngine/src/Command/: CommandManager.cpp  CommandManager.h  CoreCommands.h
SphynxEngine/src/Component/: AnimationComponent.h  BoxCollider2DComponent.h  BoxRendererComponent.h  CapsuleCollider2DComponent.h  CircleCollider2DComponent.h  Common.h  ComponentRegistry.cpp  ComponentRegistry.h  Components.h  LineRendererComponent.h  NameComponent.h  RigidbodyComponent.h  ScriptComponent.cpp  ScriptComponent.h  SpriteRendererComponent.h  TransformComponent.h  UUIDComponent.h
SphynxEngine/src/Container/: Array.h  Map.h  Pair.h  Set.h
SphynxEngine/src/Core/: Application.cpp  Application.h  Assets.h  Commands.h  Core.h  Delegate.h  Engine.cpp  Engine.h  EntryPoint.h  Invoke.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Time.cpp  Time.h  UUID.cpp  UUID.h
SphynxEngine/src/Events/: Event.h  InputEvent.h  WindowEvent.h
SphynxEngine/src/Input/: Input.cpp  Input.h  Keycode.h  MouseButton.h
SphynxEngine/src/Logging/: Log.cpp  Log.h  LogDefines.h
SphynxEngine/src/Math/: Color.cpp  Color.h  Math.h  Matrix.h  Transform.h  Vector.h
SphynxEngine/src/Module/: ModuleManager.cpp  ModuleManager.h
SphynxEngine/src/Physics/: Collider2D.cpp  Collider2D.h  Physics2D.cpp  Physics2D.h  Physics2DRenderer.cpp  Physics2DRenderer.h  Physics2DUtils.h  PhysicsWorld2D.cpp  PhysicsWorld2D.h  Rigidbody2D.cpp  Rigidbody2D.h
SphynxEngine/src/Reflection/: AccessSpecifier.h  Attribute.cpp  Attribute.h  Class.cpp  Class.h  Enum.cpp  Enum.h  Function.cpp  Function.h  Macros.h  Property.cpp  Property.h  PropertyComparator.cpp  PropertyComparator.h  PropertyTree.cpp  PropertyTree.h  QualifiedType.h  Qualifier.h  Reflection.h  Registry.cpp  Registry.h  StdTypes.cpp  StdTypes.h  Storage.h  Tag.h  TemplateArgument.h  Type.h  TypedValue.cpp  TypedValue.h  ValueType.h
SphynxEngine/src/Renderer/: Buffer.cpp  Buffer.h  Camera.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererTypes.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h
SphynxEngine/src/Scene/: Actor.cpp  Actor.h  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h
SphynxEngine/src/Scripting/: ScriptingManager.cpp  ScriptingManager.h
SphynxEngine/src/Serialization/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Reader.cpp  Reader.h  SceneDeserializer.cpp  SceneDeserializer.h  SceneSerializer.cpp  SceneSerializer.h  Serialization.h  SerializationConstants.h  Writer.cpp  Writer.h
SphynxEngine/src/Sound/: Sound.cpp  Sound.h  SoundInstance.cpp  SoundInstance.h  SoundManager.cpp  SoundManager.h  SoundSystem.cpp  SoundSystem.h
SphynxEngine/src/Traits/: Common.h  Container.h  Function.h  Traits.h  Tuple.h  Utility.h
SphynxEngine/src/Utils/: PlaybackState.h
SphynxEngineEditor/: CMakeLists.txt
SphynxEngineEditor/src/: EditorApplication.cpp  EditorApplication.h  EditorCameraController.cpp  EditorCameraController.h  EditorLayer.cpp  EditorLayer.h  ImGuiExtra.cpp  ImGuiExtra.h
SphynxEngineEditor/src/Base/: Editor.cpp  Editor.h  Panel.cpp  Panel.h  Resources.h  Toolbar.cpp  Toolbar.h  Widget.cpp  Widget.h
SphynxEngineEditor/src/Dialogs/: FileDialog.h
SphynxEngineEditor/src/Editors/: SceneEditor.cpp  SceneEditor.h
SphynxEngineEditor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  DetailsPanel.cpp  DetailsPanel.h  SceneOptionsPanel.cpp  SceneOptionsPanel.h  SceneOutlinerPanel.cpp  SceneOutlinerPanel.h  SceneToolbar.cpp  SceneToolbar.h  ViewportPanel.cpp  ViewportPanel.h
(+163 files in other folders)
